
  * search: generate configuration files once only when rebuilding
    (Gabriel McManus)
  * attachment: Fix an uninitialised value warning when editing a page
    that currently has no attachments.
  * Fix a bug with links to pages whose names contained colons.
  * attachment: Support old versions of CGI.pm that lack an upload method.
  * Include ikiwiki.setup in examples in the debian package.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 01:52:48 -0400

ikiwiki (2.52) unstable; urgency=low

  * attachment: New plugin for uploading and managing attachments.
    This includes a fairly powerful PageSpec based admin pref for deciding
    whether to accept a given upload, and an attachment management interface
    on the edit page.
    (Sponsored by The TOVA Company.)
  * If attachments are not enabled, configure CGI.pm to disable file
    uploads by default. (An anti-DOS measure.)
  * toggle: Add support for toggles that are open by default.
  * toggle: Fix to work in preview mode.
  * toggle: Add javascript to top of page, not to end. This avoids flicker
    since closed toggles will not be displayed as the page is loading.
  * The editpage form now uses the raw page name, not the page title, in its
    'page' cgi parameter. Using the title was ambiguous and made it
    impossible to tell between some pages, like "foo/bar" and "foo__47__bar",
    sometimes causing the wrong page to be edited.
  * This change means that some edit links need to be updated.
    Force a rebuild on upgrade to this version.
  * Above change also allowed really fixing escaped slashes from the blogpost
    form.

 -- Joey Hess <joeyh@debian.org>  Sun, 06 Jul 2008 19:15:37 -0400

ikiwiki (2.51) unstable; urgency=low

  * Improve toplevel parentlink to link directly to index.html when usedirs is
    disabled.
  * map: Add a "show" parameter. "show=title" can be used to display page
    titles, rather than the default page name. Based on a patch from 