@@ -96,3 +96,7 @@ Is it Ikiwiki bug or my attachment plugin is misconfigured? --[[Paweł|ptecza]]
 
 > I've reproduced the bug, and it does seem to be a bug with the perl in
 > debian stable/ubuntu hardy. Trying to figure it out --[[Joey]]
+
+> This was amazingly disgusting, see commit message for the full horror of
+> the details. I think it's [[done]] -- at least it works on debian stable
+> now. --[[Joey]]
