@@ -7,6 +7,7 @@ ikiwiki (2.53) UNRELEASED; urgency=low
   * Fix a bug with links to pages whose names contained colons.
   * attachment: Support old versions of CGI.pm that lack an upload method.
   * Include ikiwiki.setup in examples in the debian package.
+  * attachment: Support perl 5.8's buggy version of CGI.pm.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 01:52:48 -0400
 
